# rust-imgui-dockable-template

./: Cargo.toml  LICENSE  README.md
imgui-sys/src/: docking_bindings.rs
imgui-winit-support/src/: lib.rs
imgui_backend/imgui/src/: clipboard.rs
src/: main.rs  main_instance.rs
src/support/: mod.rs
src/utils/: mod.rs  os_identity.rs
